--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "afrodite-components": "git+ssh://git@github.com:Jorge-Bill/afrodite-components-react.git",
+    "moment": "^2.29.1",
     "next": "^12.0.7",
+    "prop-types": "^15.7.2",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "afrodite-components-react": "git+ssh://git@github.com:Jorge-Bill/afrodite-components-react.git",
-    "styled-components": "^5.3.3",
-    "prop-types": "^15.7.2"
+    "react-markdown": "^8.0.0",
+    "react-moment": "^1.1.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.0.0"
